src/test/resources/testData/annotation/IDEA_100331_2.hx
package ;
class <text_attr descr="null">GenericTest</text_attr> {
    public var <text_attr descr="null">arr</text_attr>:<text_attr descr="null">Array</text_attr><<error descr="Unresolved type">TArray</error>>;

    public function <text_attr descr="null">new</text_attr>() {
    }
}